#1082 - split notification check for chat and system. Update translations.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -837,7 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder sucht nach einem freien Netzwe
 preferences.dialog.restart.restart=Jetzt neu starten
 preferences.dialog.restart.text=PowerFolder muss neu gestartet werden.
 preferences.dialog.restart.title=Neustart ben\u00f6tigt
-##preferences.dialog.show_notifications=Show notifications when minimized
+##preferences.dialog.show_chat_notifications=Show chat notifications
+##preferences.dialog.show_system_notifications=Show system notifications
 preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
 preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
