--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -859,7 +859,8 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-preferences.dialog.show_notifications=Show notifications when minimized
+preferences.dialog.show_chat_notifications=Show chat notifications
+preferences.dialog.show_system_notifications=Show system notifications
 preferences.dialog.usedeltaonlan=Use delta sync on LAN
 preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.userecyclebin=Use recycle bin (default)
