--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -837,7 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder intentara empalmar un puerto a
 preferences.dialog.restart.restart=Reiniciar Ahora
 preferences.dialog.restart.text=Algunos cambios requieren el reinicio de PowerFolder.
 preferences.dialog.restart.title=Reinicio requirido
-##preferences.dialog.show_notifications=Show notifications when minimized
+##preferences.dialog.show_chat_notifications=Show chat notifications
+##preferences.dialog.show_system_notifications=Show system notifications
 preferences.dialog.showadvanced=Mostrar Preferencias Avanzadas
 preferences.dialog.showpreviewpanel=Habilitar previsualizaci\u00f3n interna de im\u00e1genes
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Puedes hallar una previsualizaci\u00f3n de l imagen bajo My PowerFolders->Carpeta->Archivo->Detalles<BR>(Esta facilidad consume mucha memoria con jpg's (>500K), usar con precaci\u00f3n.)</BODY></HTML>
