--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -837,7 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder cercher\u00e0 di collegarsi ad
 preferences.dialog.restart.restart=Riavvia Ora
 preferences.dialog.restart.text=Alcune modifiche richiedono di riavviare PowerFolder.
 preferences.dialog.restart.title=Riavvio richiesto
-##preferences.dialog.show_notifications=Show notifications when minimized
+##preferences.dialog.show_chat_notifications=Show chat notifications
+##preferences.dialog.show_system_notifications=Show system notifications
 preferences.dialog.showadvanced=Mostra preferenze avanzate
 preferences.dialog.showpreviewpanel=Abilita anteprima interna delle immagini
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>E' possibile trovare l'immagine di anteprima in My PowerFolders->Cartelle->Files->Dettagli<BR>(Questa funzionalit\u00e0 consuma molta memoria con grandi file jpg(>500K), si prega di usarla con cautela.)</BODY></HTML>
