--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -837,7 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeu
 ##preferences.dialog.restart.restart=Restart Now
 ##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 ##preferences.dialog.restart.title=Restart required
-##preferences.dialog.show_notifications=Show notifications when minimized
+##preferences.dialog.show_chat_notifications=Show chat notifications
+##preferences.dialog.show_system_notifications=Show system notifications
 preferences.dialog.showadvanced=Toon geavanceerde instellingen
 preferences.dialog.showpreviewpanel=Activeer interne foto preview 
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
