#1082 - Move properties to DialogSettince. Fixes #1082

--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible
 preferences.dialog.restart.restart=Red\u00e9marrer maintenant
 preferences.dialog.restart.text=des changements n\u00e9cessitent un red\u00e9marrage.
 preferences.dialog.restart.title=Red\u00e9marrage n\u00e9cessaire
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=Pr\u00e9f\u00e9rences avanc\u00e9es
 preferences.dialog.showpreviewpanel=Active la pr\u00e9visualisation de l'image
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>vous pouvez trouver la pr\u00e9isualisation dans Mon PowerFolder->Dossier->Fichier->D\u00e9tails<BR>(Consomme \u00e9norm\u00e9ment de m\u00e9oire pour les images >500Ko, \u00e0 utiliser avec pr\u00e9caution.)</BODY></HTML>
