--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder spr\u00f3buje wybra\u0107 loso
 preferences.dialog.restart.restart=Zrestartuj Teraz
 preferences.dialog.restart.text=Niekt\u00f3re zmiany wymagaj\u0105 ponownego uruchomienia PowerFolder
 preferences.dialog.restart.title=Konieczy jest restart
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=Poka\u017c zaawansowane ustawienia
 preferences.dialog.showpreviewpanel=W\u0142\u0105cz wewn\u0119trzny podgl\u0105d obrazk\u00f3w
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
