--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder\u5c06\u5c1d\u8bd5\u7ed1\u5b9a\
 preferences.dialog.restart.restart=\u7acb\u5373\u91cd\u542f
 preferences.dialog.restart.text=\u90e8\u5206\u66f4\u6539\u9700\u8981\u91cd\u65b0\u542f\u52a8PowerFolder
 preferences.dialog.restart.title=\u9700\u8981\u91cd\u65b0\u542f\u52a8
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=\u663e\u793a\u9ad8\u7ea7\u8bbe\u7f6e
 preferences.dialog.showpreviewpanel=\u542f\u7528\u5185\u90e8\u56fe\u7247\u9884\u89c8
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u4f60\u53ef\u4ee5\u5728\u201c\u6211\u7684PowerFolder->\u6587\u4ef6\u5939->\u6587\u4ef6->\u8be6\u7ec6<BR>\u627e\u5230\u56fe\u7247\u9884\u89c8\u3002(\u8fd9\u4e2a\u529f\u80fd\u5728\u6d4f\u89c8\u5927\u56fe\u7247(>500K)\u65f6\u53ef\u80fd\u4f1a\u5360\u7528\u5927\u91cf\u5185\u5b58\uff0c\u8bf7\u614e\u7528\u3002)</BODY></HTML>
