--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=\u0633\u0648\u0641 \u064a\u062d\u0627\u064
 ##preferences.dialog.restart.restart=Restart Now
 ##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 ##preferences.dialog.restart.title=Restart required
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=\u0623\u0638\u0647\u0631 \u0627\u0644\u062e\u0635\u0627\u0626\u0635 \u0627\u0644\u0645\u062a\u0642\u062f\u0645\u0629
 preferences.dialog.showpreviewpanel=\u062a\u0645\u0643\u064a\u0646 \u0645\u0639\u0627\u064a\u0646\u0629 \u062f\u0627\u062e\u0644\u064a\u0629 \u0644\u0644\u0635\u0648\u0631\u0629
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
