--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder \u306f\u30e9\u30f3\u30c0\u30e0
 preferences.dialog.restart.restart=\u76f4\u3061\u306b\u518d\u8d77\u52d5
 preferences.dialog.restart.text=\u3044\u304f\u3064\u304b\u306e\u5909\u66f4\u306b\u306f\u305d\u306e\u9069\u7528\u306b PowerFolder \u306e\u518d\u8d77\u52d5\u304c\u5fc5\u8981\u3067\u3059\u3002
 preferences.dialog.restart.title=\u518d\u8d77\u52d5\u304c\u5fc5\u8981
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=\u8a73\u7d30\u8a2d\u5b9a\u3092\u8868\u793a
 preferences.dialog.showpreviewpanel=\u5185\u8535\u30d7\u30ed\u30b0\u30e9\u30e0\u306b\u3088\u308b\u753b\u50cf\u30d7\u30ec\u30d3\u30e5\u30fc\u3092\u6709\u52b9\u306b
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u753b\u50cf\u30d7\u30ec\u30d3\u30e5\u30fc\u306f\u3001\u30de\u30a4 \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0->\u30d5\u30a9\u30eb\u30c0->\u30d5\u30a1\u30a4\u30eb->\u8a73\u7d30 \u3067\u898b\u3089\u308c\u307e\u3059\u3002<BR>\uff08\u3053\u306e\u6a5f\u80fd\u306f\u5927\u304d\u306a jpg (>500K) \u306e\u5834\u5408\u30e1\u30e2\u30ea\u3092\u591a\u304f\u5229\u7528\u3059\u308b\u305f\u3081\u3001\u6ce8\u610f\u3057\u3066\u4f7f\u7528\u304f\u3060\u3055\u3044\u3002\uff09</BODY></HTML>
