--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -837,8 +837,8 @@ preferences.dialog.randomPort.tooltip=PowerFolder kommer f\u00f6rs\u00f6ka koppl
 ##preferences.dialog.restart.restart=Restart Now
 ##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 ##preferences.dialog.restart.title=Restart required
-##preferences.dialog.show_chat_notifications=Show chat notifications
-##preferences.dialog.show_system_notifications=Show system notifications
+##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+##preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.showadvanced=Visa avancerade inst\u00e4llningar
 preferences.dialog.showpreviewpanel=Aktivera intern f\u00f6rhandsgranskning av bilder
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
