--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -814,7 +814,7 @@ preferences.dialog.general.title=Allgemein
 preferences.dialog.iplanlist=LAN IP Liste
 preferences.dialog.language=Sprache
 preferences.dialog.lanlinesettings=LAN Geschwindingkeit
-preferences.dialog.linesettings=Inet Geschwindigkeit
+preferences.dialog.linesettings=Internet Geschwindigkeit
 preferences.dialog.network.title=Netzwerk
 preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
