translation error fixed by Dingar

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1098,9 +1098,9 @@ setmasternode.dialog.title=\u597d\u53cb\u5217\u8868\u7ba1\u7406\u5458
 setmasternode.key=a
 setmasternode.name=\u9009\u62e9\u7ba1\u7406\u5458
 
-setup.description=\u8bbe\u7f6e\u65b0\u7684\u6216\u52a0\u5165\u5df2\u7ecf\u5b58\u5728\u7684PowerFolder
+setup.description=\u5efa\u7acb\u65b0\u7684\u6216\u52a0\u5165\u5df2\u7ecf\u5b58\u5728\u7684PowerFolder
 setup.key=s
-setup.name=\u8bbe\u7f6e
+setup.name=\u65b0\u589e
 
 show_preview.description=\u9884\u89c8\u6587\u4ef6\u5939\u5728\u6587\u4ef6\u5939\u5217\u8868\u4e2d\u53ef\u89c1
 show_preview.key=S
