refs #1098 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -207,10 +207,10 @@ dialog.fatalerror.title=Schwerer Fehler
 dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
 dialog.newdirectorycreator.title=Neues Verzeichnis
 dialog.synchronization.choose=Wie m\u00f6chten Sie jetzt synchronisieren?
-##dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
-##dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
-##dialog.synchronization.duplicate.title=Duplicate use
-##dialog.synchronization.duplicate.use=This profile is used by the following folders\:
+dialog.synchronization.duplicate.delete=Löschen diese Transfer modus betrifft folgende PowerFolder.
+dialog.synchronization.duplicate.edit=Änderungen an diesem Transfer modus betrifft folgende PowerFolder.
+dialog.synchronization.duplicate.title=Doppelt benutzt
+dialog.synchronization.duplicate.use=Dieser Transfer modus wird hier benutzt\:
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
 dialog.synchronization.send_own_changes=\u00c4nderugen nur ver\u00f6ffentlichen
@@ -360,17 +360,17 @@ folder.members.synchronisation_panel.title=Mitglieds Sync Status
 
 folder_create.progress.text=Erstelle PowerFolder '{0}'
 
-##folder_remove.description=Remove this PowerFolder
-##folder_remove.dialog.button.key=R
-##folder_remove.dialog.button.name=Remove
-##folder_remove.dialog.delete=Delete meta-data
-##folder_remove.dialog.preview=Keep as preview
-##folder_remove.dialog.remove_from_os=Remove from Online Storage
-##folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
-##folder_remove.dialog.text=Remove PowerFolder {0}?
-##folder_remove.dialog.title=Remove PowerFolder {0}?
-##folder_remove.key=R
-##folder_remove.name=Remove Folder
+folder_remove.description=Diesen PowerFolder entfernen
+folder_remove.dialog.button.key=E
+folder_remove.dialog.button.name=Entfernen
+folder_remove.dialog.delete=Meta-data löschen
+folder_remove.dialog.preview=Als Vorschau beibehalten
+folder_remove.dialog.remove_from_os=Vom Online Speicher löschen
+folder_remove.dialog.sync_warning=Dieser PowerFolder wird gerade synchronisiert\!
+folder_remove.dialog.text=PowerFolder {0} entfernen?
+folder_remove.dialog.title=PowerFolder {0} entfernen?
+folder_remove.key=E
+folder_remove.name=Folder entfernen
 
 foldercreate.description=Erstellt einen neuen PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup auf Online Speicher
@@ -1292,7 +1292,7 @@ wizard.invite.selectlocaldirectory=W\u00e4hlen Sie das lokale Verzeichnis aus
 wizard.loadinvitation.addtofriends={0} der Freundesliste hizuf\u00fcgen
 wizard.loadinvitation.choosefile=Einladungs-Datei \u00f6ffnen
 wizard.loadinvitation.select=Einladung-Datei ausw\u00e4hlen
-wizard.loadinvitation.selectfile=Bitte w\u00e4hlen Sie eine Einladungs-Datei aus
+wizard.loadinvitation.selectfile=Einladungs-Datei auswählen
 wizard.loadinvitation.title=Einladung \u00f6ffnen
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
 wizard.pfwizard.title=Assistent
