refs #1098 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -160,9 +160,9 @@ dialog.alreadyrunning.startbutton=Trotzdem starten
 dialog.alreadyrunning.title=L\u00e4uft bereits
 dialog.alreadyrunning.warning=PowerFolder l\u00e4uft bereits
 dialog.binderror=Der Netzwerk Port ist bereits belegt
-dialog.binderror.option.exit=PowerFolder beenden
+dialog.binderror.option.exit=Beenden
 dialog.binderror.option.ignore=Weiter
-dialog.binderror.option.text=Kann die benötigten Netzwerk Ports nicht belegen\!\nEin Port ist nötig um\neingehende Verbindungen zuzulassen.
+dialog.binderror.option.text=Kann die benötigten Netzwerk Ports nicht belegen\!\nEin Port ist nötig um eingehende\nVerbindungen zu ermöglichen.
 dialog.binderror.option.title=Netzwerk Port Fehler\!
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
