refs #1098 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1212,9 +1212,9 @@ transfers.searching=Suche...
 transfers.to=Zu
 transfers.verifying=Abschlieﬂen
 
-##un_black_list.description=Removes a file definition to the ignore patterns
-##un_black_list.key=R
-##un_black_list.name=Remove from ignore patterns
+un_black_list.description=Entfernt die Dateien von der Ausschlussliste
+un_black_list.key=E
+un_black_list.name=Datei(en) wieder einschlieﬂen
 
 ##un_white_list.description=Removes a file definition to the ignore patterns
 ##un_white_list.key=R
