refs #922 in program register

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -948,8 +948,8 @@ pro.wizard.activation.please_purchase=Bitte erwerben Sie PowerFolder Pro um fort
 pro.wizard.activation.pro_activation=PowerFolder Pro Aktivierung
 pro.wizard.activation.recover_password=Passwort vergessen
 pro.wizard.activation.register_now=Jetzt anmelden
-pro.wizard.activation.register_now_trial_1=Kostenlos Anmelden und für 30 Tage PowerFolder Pro
-pro.wizard.activation.register_now_trial_2=testen. ZUSÄTZLICH\: 5 GB Online Speicher.
+pro.wizard.activation.register_now_trial_1=Kostenlos anmelden und für 30 Tage 
+pro.wizard.activation.register_now_trial_2=PowerFolder Pro testen.
 pro.wizard.activation.successful=Aktivierung erfolgreich
 pro.wizard.activation.thanks_activation=Vielen Dank, dass Sie PowerFolder Pro aktiviert haben.
 pro.wizard.activation.thanks_additional=Vielen Dank, dass Sie zusätzliche\nPowerFolder Pro Lizenzen erworben haben.
