--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,61 @@
 # http://www.powerfolder.com
 #
 
+file_filter_panel.combo.tooltip=Dateianzeige filtern
+file_filter_panel.filter_by_filename.hint=Nach Datei suchen
+file_filter_panel.filter_by_filename.tooltip=Dateianzeige nach Dateiname filtern
+files_tab.recursive_selection.tooltip=Flache Ansicht aller Dateien aller Verzeichnisse
+
+find_users_panel.search_for_user.hint=Computer suchen
+find_users_panel.search_for_user.tooltip=Drei oder mehr Zeichen eingeben um nach einem Computer zu suchen
+
+folder_remove.dialog.remove_from_local=Nicht mehr lokal synchronisieren
+
+folderpanel.hometab.confirm_local_folder_move.text=Lokales Verzeichnis wird von\n{0}\nnach\n{1}\nverschoben.
+folderpanel.hometab.confirm_local_folder_move.title=Verschieben bestätigen
+
+folderpanel.hometab.last_file_change_date=Datum der letzten Änderung
+
+folderpanel.hometab.move_content=Sollen die Dateien mit verschoben werden?
+
+folderpanel.hometab.move_error.other=Ein Fehler ist beim Verschieben aufgetreten\:\n{0}
+folderpanel.hometab.move_error.temp=Temporäres Verzeichnis konnte nicht erstellt werden
+folderpanel.hometab.move_error.title=Fehler beim Verschieben
+
+folderpanel.settingstab.add_patterns.text_1=Die folgende Ausschlüsse werden hinzugefügt
+folderpanel.settingstab.add_patterns.title=Dateien ausschließen
+
+invitation.utils.unable.write.text=Fehler beim Schreiben der Einladung, Versuchen Sie es erneut
+invitation.utils.unable.write.title=Fehler beim Schreiben
+
+lowmemory.warn=PowerFolder benötigt mehr zugewiesenen Hauptspeicher.\n\nUnter http\://wiki.powerfolder.com/wiki/ erfahren Sie wie Sie PowerFolder mehr Speicher zuordnen können.
+
+preferences.dialog.dialogs.warn_on_duplicate_folders=Warnen, wenn ein Transfer Modus mehrerer PowerFolder geändert wird.
+
+preferences.dialog.show_chat_notifications=Popup für neue Chat Nachrichten anzeigen
+preferences.dialog.show_system_notifications=Popups für Systemmeldungen anzeigen
+
+pro.wizard.activation.already_account=Ich bin bereits registriert
+
+pro.wizard.activation.password_confirm=Passwort bestätigen
+pro.wizard.activation.password_length=Password muss mindesten 6 Zeichen lang sein.
+
+pro.wizard.activation.register_why=Warum muss Ich mich registrieren?
+pro.wizard.activation.subscribe_newsletter=Newsletter abonnieren
+
+quickinfo.webservice.foldersmirrored={0} von {1} PowerFolder werden online gesichert. {2} Online Speicher benutzt.
+
+recyclebin.confirmation.overwrite.on.restore.changed.date=Geändert {0}
+recyclebin.confirmation.overwrite.on.restore.overwrite.filename={0} überschreiben?
+recyclebin.confirmation.overwrite.on.restore.size.bytes=Größe {0}
+recyclebin.confirmation.overwrite.on.restore.title=Datei wiederherstellen
+recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Mit der Datei aus dem Papierkorb?
+
+un_mark.description=Entfernt dies Datei(en) aus der Liste der neuen, kürzlich geladenen Dateien
+un_mark.key=N
+un_mark.name=Neu-Markierung entfernen
+
+
 wizard.login_online_storage.connecting=Verbinde...
 dialog.updatecheck.downloadAndUpdateSilent=Update im Hintergrund
 general.reject=Ablehnen
