Added missing translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,9 @@
 # http://www.powerfolder.com
 #
 
+pro.wizard.activation.valid_from=Gültig ab
+pro.wizard.activation.valid_to=Gültig bis
+
 file_filter_panel.combo.tooltip=Dateianzeige filtern
 file_filter_panel.filter_by_filename.hint=Nach Datei suchen
 file_filter_panel.filter_by_filename.tooltip=Dateianzeige nach Dateiname filtern
