Better wording in Setup wizard

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+wizard.send_invitations.send_by_mail.cc_me=Einladung auch an mich senden (CC)
 pro.wizard.activation.valid_from=Gültig ab
 pro.wizard.activation.valid_to=Gültig bis
 
@@ -651,9 +652,9 @@ hide_preview.description=Vorschau-Folder nicht in der Liste anzeigen
 hide_preview.key=V
 hide_preview.name=Vorschau-Folder ausblenden
 
-hideoffline.description=Es werden nur Benutzer angezeigt, die gerade online sind
+hideoffline.description=Es werden nur Computer angezeigt, die gerade online sind
 hideoffline.key=O
-hideoffline.name=Nur Benutzer anzeigen, die online sind
+hideoffline.name=Nur Computer anzeigen, die online sind
 
 imagefileinfo.resolution=Aufl\u00f6sung
 imagefileinfo.unknown=unbekannt
@@ -1387,9 +1388,9 @@ wizard.webservice.register=Neu registrieren
 wizard.webservice.username=Email
 wizard.whattodo.backup_folder=Verzeichnis sichern
 wizard.whattodo.custom_sync=Erweitertes Setup
-wizard.whattodo.hostwork=Verzeichnis freigeben
+wizard.whattodo.hostwork=Verzeichnis freigeben/versenden
 wizard.whattodo.load_invite=Einladungs-Datei \u00f6ffnen
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Neues Projekt aufsetzen
-wizard.whattodo.synchronized_folder=Verzeichnis synchronisieren
+wizard.whattodo.synchronized_folder=Computer synchronisieren
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
