--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,10 @@
 # http://www.powerfolder.com
 #
 
+general.search=Suchen
+general.close=Schliessen
+general.close.key=S
+
 wizard.send_invitations.send_by_mail.cc_me=Einladung auch an mich senden (CC)
 pro.wizard.activation.valid_from=Gültig ab
 pro.wizard.activation.valid_to=Gültig bis
