More explaining help text instead of example email

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1134,7 +1134,7 @@ select_invitation.message_text=Nachricht an den Empfänger
 select_invitation.text1=Einladungen werden benötigt um Zugriff zu erhalten 
 select_invitation.text2=Senden Sie nie einem Unbekannten ein Einladung. 
 
-send_invitation.example_email_address=email@domain.de
+send_invitation.example_email_address=Email des Empfängers eingeben
 send_invitation.multi_users=Mehrere ausgew\u00e4hlt
 send_invitation.no_users=Keine Auswahl
 send_invitation.select_user.text=Auswählen
