--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -703,9 +703,8 @@ lowmemory.configure_success=H\u00f6here Hauptspeicher-Einstellungen wurden insta
 lowmemory.do_nothing=Ignorieren
 lowmemory.dont_autodetect=Hauptspeicher nicht mehr \u00fcberpr\u00fcfen
 lowmemory.increase=Einstellungen erh\u00f6hen
-lowmemory.text=PowerFolder steht nicht gen\u00fcgen Hauptspeicher zu Verf\u00fcgung.\n\nPowerFolder kann die Hauptspeicher-Einstellungen erh\u00f6hen.
+lowmemory.text=PowerFolder steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\nPowerFolder kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.
 lowmemory.title=Wenig Hauptspeicher
-##lowmemory.warn=PowerFolder is running out of available memory.\n\nPlease visit http\://wiki.powerfolder.com/wiki/ for advice on increasing available memory.
 
 masternode.nobody=- Niemand -
 
